# fiscal-rs

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PREMIUM_PLAN.md  README.md  SECURITY.md  deny.toml  release-plz.toml  tarpaulin-report.json
.cargo/: audit.toml
.claude/: settings.md
.githooks/: commit-msg  pre-push
.github/: dependabot.yml  pull_request_template.md
benches/: baseline_2026-03-11_1249.txt  baseline_2026-03-11_1251.txt  baseline_2026-03-11_1303.txt  baseline_2026-03-11_1326.txt  baseline_2026-03-11_1418.txt  fiscal_bench.rs
benchmarks/: run_all.sh
crates/fiscal-core/: CHANGELOG.md  Cargo.toml
crates/fiscal-core/src/: complement.rs  config.rs  constants.rs  contingency.rs  convert.rs  error.rs  format_utils.rs  gtin.rs  lib.rs  newtypes.rs  qrcode.rs  sanitize.rs  sealed.rs  standardize.rs  state_codes.rs  status_codes.rs  tax_element.rs  tax_ibs_cbs.rs  tax_icms.rs  tax_is.rs  tax_issqn.rs  tax_pis_cofins_ipi.rs  timezone.rs  traits.rs  types.rs  xml_utils.rs
crates/fiscal-core/src/complement/: b2b.rs  cancellation.rs  event.rs  helpers.rs  inutilizacao.rs  mod.rs  protocol.rs
crates/fiscal-core/src/contingency/: adjust.rs  manager.rs  mod.rs  tests.rs
crates/fiscal-core/src/convert/: build_det.rs  build_header.rs  build_optional.rs  build_parties.rs  build_tax.rs  build_totals.rs  build_xml.rs  builder.rs  helpers.rs  mod.rs  parser.rs  structures.rs  types.rs
crates/fiscal-core/src/newtypes/: access_key.rs  mod.rs  monetary.rs  product_codes.rs  state.rs  tax_id.rs
crates/fiscal-core/src/tax_ibs_cbs/: build_item.rs  mod.rs  tests.rs  totals.rs  types_advalorem.rs  types_mono.rs  types_special.rs
crates/fiscal-core/src/tax_icms/: builders.rs  csosn.rs  cst.rs  cst_xml.rs  data.rs  mod.rs  totals.rs
crates/fiscal-core/src/types/: additional.rs  billing.rs  build.rs  certificate.rs  enums.rs  issuer.rs  item.rs  mod.rs  optional.rs  payment.rs  product.rs  qrcode_params.rs  recipient.rs  retained.rs  totals.rs  transport.rs
crates/fiscal-core/src/xml_builder/: access_key.rs  builder.rs  dest.rs  det.rs  emit.rs  ide.rs  mod.rs  optional.rs  pag.rs  tax_id.rs  total.rs  transp.rs
crates/fiscal-core/src/xml_builder/det/: icms_variant.rs  mod.rs  prod.rs  tests.rs
crates/fiscal-crypto/: CHANGELOG.md  Cargo.toml
crates/fiscal-crypto/src/: certificate.rs  lib.rs
crates/fiscal-crypto/src/certificate/: c14n.rs  mod.rs  pfx.rs  pkcs12_parser.rs  sign.rs  tests.rs
crates/fiscal-cte/: CHANGELOG.md  Cargo.toml  README.md
crates/fiscal-cte/src/: access_key.rs  builder.rs  builder_bpe.rs  builder_gtve.rs  builder_os.rs  lib.rs  signing.rs  types.rs  types_bpe.rs  types_gtve.rs  types_os.rs  validate.rs
crates/fiscal-cte/tests/: builder.rs  xsd_roundtrip.rs  xsd_roundtrip_bpe.rs  xsd_roundtrip_gtve.rs  xsd_roundtrip_os.rs
crates/fiscal-cte/tests/common/: mod.rs
crates/fiscal-mdfe/: CHANGELOG.md  Cargo.toml  README.md
crates/fiscal-mdfe/src/: access_key.rs  builder.rs  lib.rs  signing.rs  types.rs  validate.rs
crates/fiscal-mdfe/tests/: builder.rs
crates/fiscal-napi/: CHANGELOG.md  Cargo.toml  package.json
crates/fiscal-napi/npm/darwin-arm64/: README.md  package.json
crates/fiscal-napi/npm/darwin-x64/: README.md  package.json
crates/fiscal-napi/npm/linux-arm64-gnu/: README.md  package.json
crates/fiscal-napi/npm/linux-arm64-musl/: README.md  package.json
crates/fiscal-napi/npm/linux-x64-gnu/: README.md  package.json
crates/fiscal-napi/npm/linux-x64-musl/: README.md  package.json
crates/fiscal-napi/npm/win32-arm64-msvc/: README.md  package.json
crates/fiscal-napi/npm/win32-x64-msvc/: README.md  package.json
crates/fiscal-napi/src/: builder.rs  certificate.rs  client.rs  contingency.rs  lib.rs  utils.rs
crates/fiscal-nfse/: CHANGELOG.md  Cargo.toml  README.md
crates/fiscal-nfse-mun/: CHANGELOG.md  Cargo.toml  README.md
crates/fiscal-nfse-mun/src/: error.rs  lib.rs  model.rs  provider.rs  providers.rs  registry.rs
crates/fiscal-nfse-mun/src/abrasf/: mod.rs  transport.rs
crates/fiscal-nfse-mun/src/saopaulo/: mod.rs  transport.rs
crates/fiscal-nfse-mun/tests/: abrasf_gate.rs  sp_gate.rs
crates/fiscal-nfse/src/: builder.rs  lib.rs  types.rs
crates/fiscal-nfse/tests/: xsd_roundtrip_dps.rs
crates/fiscal-sefaz/: CHANGELOG.md  Cargo.toml
crates/fiscal-sefaz/src/: client.rs  lib.rs  request_builders.rs  response_parsers.rs  services.rs  soap.rs  urls.rs  validate.rs
crates/fiscal-sefaz/src/client/: authorize.rs  delivery.rs  events.rs  mod.rs  rtc.rs
crates/fiscal-sefaz/src/request_builders/: autorizacao.rs  conciliacao.rs  epec.rs  event_batch.rs  event_core.rs  eventos.rs  helpers.rs  mod.rs  rtc.rs  tests.rs
crates/fiscal-sefaz/src/response_parsers/: authorize.rs  consult.rs  event.rs  helpers.rs  inutilize.rs  misc.rs  mod.rs  status.rs  types.rs
crates/fiscal-sefaz/src/urls/: mod.rs  nfce65.rs  nfce_urls.rs  nfe55.rs  tests.rs
crates/fiscal-xsd/: Cargo.toml
crates/fiscal-xsd/schemas/: README.md
crates/fiscal-xsd/src/: lib.rs  schemas.rs
crates/fiscal-xsd/src/schemas/: abrasf_203.rs  bpe_100.rs  cte_400.rs  mdfe_300.rs  nfe_400.rs  nfse_101.rs  saopaulo_v01.rs  saopaulo_v02.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_gtin_validation.rs  fuzz_response_parsers.rs  fuzz_txt_to_xml.rs  fuzz_xml_standardize.rs  fuzz_xml_tag_extraction.rs
scripts/: gen-napi.py  install-hooks.sh
src/: certificate.rs  complement.rs  constants.rs  contingency.rs  error.rs  gtin.rs  lib.rs  sefaz.rs  tax_element.rs  tax_icms.rs  tax_is.rs  tax_issqn.rs  tax_pis_cofins_ipi.rs  types.rs
tests/: certificate_test.rs  complement_ported_test.rs  complement_test.rs  convert_coverage_test.rs  deep_comm_coverage_ported_test.rs  make_ported_test.rs  misc_ported_test.rs  property_tests.rs  qrcode_test.rs  render_coverage_ported_test.rs  snapshot_tests.rs  tax_coverage_ported_part2_test.rs  tax_coverage_ported_test.rs  tax_icms_test.rs  tax_pis_cofins_ipi_test.rs  tools_ported_test.rs  types_coverage_test.rs  xml_builder_coverage_test.rs  xml_builder_fixes_test.rs  (+1 more)
(+75 files in other folders)
