[package]
name = "fiscal"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Brazilian fiscal document library (NF-e/NFC-e) — Rust port of sped-nfe"

[dependencies]
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
divan = "0.1"
openssl = "0.10"
base64 = "0.22"

[dev-dependencies]
pretty_assertions = "1"
rstest = "0.25"
proptest = "1"
insta = { version = "1", features = ["yaml"] }
chrono = { version = "0.4", features = ["serde"] }

[[bench]]
name = "fiscal_bench"
harness = false
