[workspace]
members = [
    "crates/fiscal-core",
    "crates/fiscal-crypto",
    "crates/fiscal-sefaz",
]
resolver = "2"

[package]
name = "fiscal"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Brazilian fiscal document library (NF-e/NFC-e) — Rust port of sped-nfe"

[dependencies]
fiscal-core = { path = "crates/fiscal-core" }
fiscal-crypto = { path = "crates/fiscal-crypto" }
fiscal-sefaz = { path = "crates/fiscal-sefaz" }

[dev-dependencies]
pretty_assertions = "1"
rstest = "0.25"
proptest = "1"
insta = { version = "1", features = ["yaml"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
divan = "0.1"
openssl = "0.10"

[[bench]]
name = "fiscal_bench"
harness = false
