[workspace]
members = [
    "crates/fiscal-core",
    "crates/fiscal-crypto",
    "crates/fiscal-sefaz",
]
exclude = [
    "benchmarks/rust",
]
resolver = "2"

[package]
name = "fiscal"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Brazilian fiscal document library (NF-e/NFC-e) — Rust port of sped-nfe"
license = "MIT"
repository = "https://github.com/JoaoHenriqueBarbosa/fiscal-rs"
documentation = "https://fiscal-rs-docs.vercel.app/"
keywords = ["nfe", "nfce", "fiscal", "brazil", "sefaz"]
categories = ["encoding", "cryptography", "web-programming"]

[dependencies]
fiscal-core = { path = "crates/fiscal-core", version = "0.2.0" }
fiscal-crypto = { path = "crates/fiscal-crypto", version = "0.1.3" }
fiscal-sefaz = { path = "crates/fiscal-sefaz", version = "0.2.0" }

[dev-dependencies]
pretty_assertions = "1"
rstest = "0.26"
proptest = "1"
insta = { version = "1", features = ["yaml"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
divan = "0.1"
openssl = "0.10"
tokio = { version = "1", features = ["full"] }
sha1 = "0.10"
base64 = "0.22"
regex = "1"

[[bench]]
name = "fiscal_bench"
harness = false
