[package]
name = "fiscal-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Core types, tax calculations, and XML builder for Brazilian fiscal documents"
license = "MIT"

[dependencies]
quick-xml = { version = "0.39", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
