[package]
name = "fiscal-core"
version = "0.6.0"
edition = "2024"
rust-version = "1.85"
description = "Core types, tax calculations, and XML builder for Brazilian fiscal documents"
license = "MIT"
repository = "https://github.com/JoaoHenriqueBarbosa/fiscal-rs"
keywords = ["nfe", "nfce", "fiscal", "brazil", "xml"]
categories = ["encoding"]

[features]
ts = ["dep:ts-rs"]

[dependencies]
quick-xml = { version = "0.39", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
ts-rs = { version = "12", features = ["serde-compat", "chrono-impl"], optional = true }
