[package]
name = "fiscal-crypto"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Certificate handling and XML signing for Brazilian fiscal documents"

[dependencies]
fiscal-core = { path = "../fiscal-core" }
openssl = "0.10"
base64 = "0.22"
sha1 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
