[package]
name = "fiscal-crypto"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
description = "Certificate handling and XML signing for Brazilian fiscal documents"
license = "MIT"
repository = "https://github.com/JoaoHenriqueBarbosa/fiscal-rs"
keywords = ["nfe", "xml-dsig", "certificate", "pkcs12", "signing"]
categories = ["cryptography"]

[dependencies]
fiscal-core = { path = "../fiscal-core", version = "0.5.0" }
openssl = "0.10"
base64 = "0.22"
sha1 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
