[package]
name = "fiscal-crypto"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
description = "Certificate handling and XML signing for Brazilian fiscal documents"
license = "MIT"
repository = "https://github.com/JoaoHenriqueBarbosa/fiscal-rs"
keywords = ["nfe", "xml-dsig", "certificate", "pkcs12", "signing"]
categories = ["cryptography"]

[dependencies]
fiscal-core = { path = "../fiscal-core", version = "0.7.3" }
base64 = "0.22"
der = { version = "0.7", features = ["derive", "oid", "alloc"] }
x509-cert = { version = "0.2", features = ["pem"] }
pkcs8 = { version = "0.11", features = ["pem", "alloc"] }
rsa = { version = "0.9" }
pkcs12 = { version = "0.1", features = ["kdf"] }
rc2 = "0.9"
cbc = "0.2"
cipher = "0.5"
aes = "0.9"
des = "0.9"
pbkdf2 = "0.12"
hmac = "0.12"
rand = "0.9"
sha1 = "0.10"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
