[package]
name = "fiscal-cte"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
description = "Types and XML builder for CT-e (57), CT-e OS (67), GTV-e (64) and BP-e (63) — Brazilian transport fiscal documents"
license = "MIT"
repository = "https://github.com/JoaoHenriqueBarbosa/fiscal-rs"
keywords = ["cte", "bpe", "gtve", "fiscal", "brazil"]
categories = ["encoding"]
readme = "README.md"

[features]
ts = ["dep:ts-rs", "fiscal-core/ts"]

[dependencies]
fiscal-core = { path = "../fiscal-core", version = "0.7.3" }
fiscal-crypto = { path = "../fiscal-crypto", version = "0.4.0" }
quick-xml = { version = "0.39", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
ts-rs = { version = "12", features = ["serde-compat", "chrono-impl"], optional = true }

[dev-dependencies]
fiscal-xsd = { path = "../fiscal-xsd", version = "0.1.0", features = ["cte", "bpe"] }
