[package]
name = "fiscal-napi"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Node.js native binding for fiscal-rs via napi-rs"
license = "MIT"
repository = "https://github.com/JoaoHenriqueBarbosa/fiscal-rs"
keywords = ["nfe", "nfce", "fiscal", "nodejs", "napi"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
fiscal-core = { path = "../fiscal-core", version = "0.6.0" }
fiscal-crypto = { path = "../fiscal-crypto", version = "0.2.3" }
fiscal-sefaz = { path = "../fiscal-sefaz", version = "0.4.3" }

napi = { version = "3", features = ["napi9", "async", "serde-json"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
napi-build = "2"
