[package]
name = "fiscal-nfse-mun"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "NFS-e municipal (ABRASF + sistemas próprios) — interface padrão por provedor"
license = "MIT"
repository = "https://github.com/tfiliano/fiscal-rs"
keywords = ["nfse", "nota-fiscal", "fiscal", "brazil", "abrasf"]
categories = ["api-bindings", "finance"]
readme = "README.md"

[features]
default = []
# Habilita o transporte (SOAP/REST via reqwest + mTLS).
client = ["dep:reqwest", "dep:async-trait"]

[dependencies]
fiscal-core = { path = "../fiscal-core", version = "0.7.3" }
fiscal-crypto = { path = "../fiscal-crypto", version = "0.3.1" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
async-trait = { version = "0.1", optional = true }
reqwest = { version = "0.13", default-features = false, features = ["native-tls"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
fiscal-xsd = { path = "../fiscal-xsd", version = "0.1.0", features = ["abrasf", "saopaulo"] }
