[package]
name = "fiscal-nfse"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "NFS-e Nacional (DPS 1.01, SEFIN) — tipos e builder para a Declaração de Prestação de Serviço"
license = "MIT"
repository = "https://github.com/JoaoHenriqueBarbosa/fiscal-rs"
keywords = ["nfse", "dps", "sefin", "fiscal", "brazil"]
categories = ["encoding"]
readme = "README.md"

[dependencies]
fiscal-core = { path = "../fiscal-core", version = "0.7.3" }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
fiscal-crypto = { path = "../fiscal-crypto", version = "0.3.1" }
fiscal-xsd = { path = "../fiscal-xsd", version = "0.1.0", features = ["nfse"] }
