[package]
name = "fiscal-sefaz"
version = "0.4.1"
edition = "2024"
rust-version = "1.85"
description = "SEFAZ URLs, request builders, response parsers, and async client for Brazilian fiscal documents"
license = "MIT"
repository = "https://github.com/JoaoHenriqueBarbosa/fiscal-rs"
keywords = ["nfe", "sefaz", "soap", "brazil", "fiscal"]
categories = ["web-programming"]

[features]
default = ["client"]
client = ["dep:reqwest"]

[dependencies]
fiscal-core = { path = "../fiscal-core", version = "0.5.0" }
fiscal-crypto = { path = "../fiscal-crypto", version = "0.2.1" }
chrono = { version = "0.4", features = ["serde"] }
quick-xml = "0.39"
reqwest = { version = "0.13", default-features = false, features = ["native-tls"], optional = true }
flate2 = "1"
base64 = "0.22"
